--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/socket.io": "^3.0.1",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
+    "https": "^1.0.0",
     "socket.io": "^4.8.1"
   },
   "devDependencies": {
