--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -18,5 +18,5 @@ jobs:
           script: |
             cd ~/kubegame-server
             git pull origin main
-            npm install --production
+            npm install
             pm2 restart 0
