--- a/src/WorldFiles/deathmatchWorldSettings.json
+++ b/src/WorldFiles/deathmatchWorldSettings.json
@@ -6,6 +6,15 @@
     "controlledObject": false,
     "rightHand": "pistol"
   },
+  "spawnPoints": [
+    [0, 1, 0],
+    [4, 1, -11],
+    [-6, 1, 0],
+    [10, 1, 10],
+    [14, 1, -14],
+    [7, 1, -20],
+    [14, 1, 9]
+  ],
   "gameObjects": [
     {
       "type": "box",
@@ -13,6 +22,12 @@
       "position": { "x": 0, "y": -0.5, "z": 0 },
       "quaternion": { "x": 0, "y": 0, "z": 0, "w": 1 },
       "scale": { "x": 5000, "y": 0.1, "z": 5000 }
+    },
+    {
+      "type": "trimesh",
+      "name": "arena",
+      "position": { "x": 0, "y": 0, "z": 0 },
+      "quaternion": { "x": 0, "y": 0, "z": 0, "w": 1 }
     },
     {
       "type": "spawner",
