--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -18,4 +18,14 @@ jobs:
           script: |
             cd ~/kubegame-server
             git pull origin main
+
+            # Only reinstall dependencies if package files changed
+            if git diff --name-only HEAD@{1} | grep -q "package-lock.json\|package.json"; then
+              echo "📦 Dependencies changed, installing..."
+              npm install --omit=dev
+            else
+              echo "✅ No dependency changes, skipping npm install"
+            fi
+
+            npx prisma migrate deploy
             pm2 restart 0
